Link to bek.is from /about

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -33,11 +33,12 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Bek Stone is a creative director, designer, and strategist whose
-        passion for people and socially-valuable pursuits has permeated her
-        career for more than a decade. With a keen mind for transforming
-        complexity into delight, and the business acumen to drive decisions,
-        Bek has won the respect of clients and collaborators alike.</p>
+        <p><a href="https://bek.is/">Bek Stone</a> is a creative director,
+        designer, and strategist whose passion for people and socially-valuable
+        pursuits has permeated her career for more than a decade. With a keen
+        mind for transforming complexity into delight, and the business acumen
+        to drive decisions, Bek has won the respect of clients and
+        collaborators alike.</p>
 
         <div class="social">
           <a href="https://twitter.com/saintbek" class="twitter" target="_blank">@saintbek</a>
