First names only in about blurb

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -33,7 +33,7 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p><a href="https://bek.is/">Bek Stone</a> is a creative director,
+        <p><a href="https://bek.is/">Bek</a> is a creative director,
         designer, and strategist whose passion for people and socially-valuable
         pursuits has permeated her career for more than a decade. With a keen
         mind for transforming complexity into delight, and the business acumen
@@ -54,7 +54,7 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p><a href="https://zakj.net/">Zak Johnson</a> has architected and
+        <p><a href="https://zakj.net/">Zak</a> has architected and
         built software since the late 90s. His passion for crafting experiences
         that are fun, easy to use, and reliable has defined his work. Zak's
         intimate familiarity with the entire web stack&mdash;from
