--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -33,11 +33,10 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p><a href="https://bek.is/">Bek</a> is a creative director,
-        designer, and strategist whose passion for people and socially-valuable
-        pursuits has permeated her career for more than a decade. With a keen
-        mind for transforming complexity into delight, and the business acumen
-        to drive decisions, Bek has won the respect of clients and
+        <p><a href="https://bek.is/">Bek</a>’s passion for people and socially
+        valuable pursuits has permeated her career for more than a decade. With
+        a keen mind for transforming complexity into delight, and the business
+        acumen to drive decisions, Bek has won the respect of clients and
         collaborators alike.</p>
 
         <div class="social">
