Add some performance/SEO tweaks

--- a/base.styl
+++ b/base.styl
@@ -15,6 +15,7 @@ $mobile = "only screen and (max-width: 568px)"
 $desktop = "only screen and (min-width: 569px)"
 
 @font-face
+  font-display fallback
   font-family ProximaNova
   font-style normal
   font-weight normal
